# lifetrack-cpp

./: CMakeLists.txt  README.md  main.cpp
src/shared/domain/aggregate/: aggregateRoot.cpp  aggregateRoot.h
src/shared/domain/entity/: entity.cpp  entity.h
src/shared/domain/event/: domainEvent.cpp  domainEvent.h
src/shared/domain/value/: id.cpp  id.h
src/tracker/category/domain/aggregate/: categoryAggregate.cpp  categoryAggregate.h
src/tracker/category/domain/entity/: categoryEntity.cpp  categoryEntity.h
